# 4444-Downloader-v5

./: .gitignore  MergingBugSolved.md  README.md  build-release.ps1  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
